--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,17 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>This is FRONTEND</title>
+	<title>W7 practice</title>
+
+	<style>
+		#root{
+			width: 200px;
+			height: 200px;
+			background-color: blue;
+		}
+	</style>
+	<script src="script.js"></script>
+
 </head>
 <body>
 	<div id="root"></div>
