--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="reset.css">
 	<link rel="stylesheet" href="style.css">
 	
+	<script src="data.js"></script>
 	<script src="script.js"></script>
 	
 </head>
